Fixing site-head nav alignment

--- a/_sass/_site-logo.scss
+++ b/_sass/_site-logo.scss
@@ -1,5 +1,5 @@
 .site-logo {
-    display: inline-block;
+    float: left;
     margin-top: $half-spacing-unit;
     margin-left: $base-spacing-unit;
 
